--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@
   background-image: url("../assets/images/confetti-unscreen.gif");
 }
 
-video {
+.video {
   object-fit: cover;
   width: 100vw;
   height: 100vh;
